Fix contrast for accessibility

--- a/components/blog/BlogPreviewEntry/BlogPreviewEntry.module.css
+++ b/components/blog/BlogPreviewEntry/BlogPreviewEntry.module.css
@@ -8,7 +8,7 @@
 
 .postDate {
     font-size: 0.8rem;
-    color: #999;
+    color: #d7d7d7;
     text-align: right;
     margin: 5px 0 0 0;
 }
