--- a/components/elements/LinkButton/LinkButton.module.css
+++ b/components/elements/LinkButton/LinkButton.module.css
@@ -5,7 +5,7 @@
 }
 
 .primary {
-    background: #4799eb;
+    background: #27599b;
 }
 .secondary {
     background: #0e2439;
